Changes for 2.2.11rc1

New features:
..F....... [ZBX-2616] update bundled DejaVu font from 2.34 to 2.35 (Richlv)
A.F....... [ZBX-1357] updated Czech, Italian and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-9935] added check for item delay, to be between 0 and 86400 seconds (vitalijs)
...G...... [ZBX-9967] fixed agent compilation error on NetBSD 7 (dimir)
.D........ [ZBX-9347] added information about zabbix_sender input file format to the man page (dimir, Richlv)
..F....... [ZBX-9919] fixed y scale calculation for linear graphs (vitalijs)
...G...PS. [ZBX-9864] fixed compilation warnings regarding SIZE_T_MAX under NetBSD (Sasha)
..F....... [ZBX-9862] added meta tag "msapplication-config" to prevent MSIE11 requesting browserconfig.xml (Gunars)
A......... [ZBX-9340] fixed "data" property not being returned by API when error is generated on DB level (Gunars)
...G...PS. [ZBX-9863] fixed compilation warning regarding "empty_str" initialization in setproctitle.c (gleb)
........S. [ZBX-9912] fixed ITEM.LASTVALUE macro value being truncated at bytes rather than utf-8 characters (wiper)
........S. [ZBX-9643] fixed value passing to action message from user defined macros (viktors)
........S. [ZBX-7511] removed trimming of leading and trailing spaces in SNMP strings (gleb)
...G...... [ZBX-8899] fixed retrieval of sensor readings on Linux 2.6 and higher (gleb, wiper)
...G...... [ZBX-9917] fixed log message when opening windows eventlog (wiper)
.......PS. [ZBX-9855] fixed SNMP dynamic index cache refresh when SNMP OID changes (dimir)
...G...... [ZBX-9740] improved proc.num for protected Windows processes (gleb)
.......PS. [ZBX-9793] fixed handling of opaque types in SNMP (asaveljevs)
.......PS. [ZBX-9895] fixed memory leak in case of unsupported field type while processing configuration received over proxy protocol (Sandis)
........S. [ZBX-9858] added error message logging when SNMP trapper file size exceeds 2GB (wiper)